--- a/Projet_14/package.json
+++ b/Projet_14/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/select": "^2.0.18",
+    "@chakra-ui/table": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
