--- a/Projet_14/package.json
+++ b/Projet_14/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@chakra-ui/select": "^2.0.18",
     "@chakra-ui/table": "^2.0.16",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "material-react-table": "^1.8.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
